--- a/index.html
+++ b/index.html
@@ -1,90 +1,111 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JL SKULL BARBER</title>
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="./assets/logo.png" type="image/png" />
 </head>
+
 <body>
   <header>
     <nav class="nav-bar">
-      <h1 class="logo">JL SKULL BARBER</h1>
+      <div class="logo-container">
+        <img src="./assets/logo.jpg" alt="Logo barbearia" class="logo" />
+        <h1 class="name">JL SKULL BARBER</h1>
+      </div>
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#cortes">Cortes</a></li>
         <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#opinioes">Opiniões</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
   </header>
+  <main>
+    <section id="home" class="hero fade-in">
+      <div class="hero-content"></div>
+    </section>
 
-  <section id="home" class="hero fade-in">
-    <div class="hero-content">
-      <h2>Seu corte que molda o seu estilo</h2>
-    </div>
-    <a href="https://wa.me/+5595984058157" class="whatsapp-btn" target="_blank">
-      <img src="./assets/whatsapp-icon.png" alt="Agende aqui" />
-    </a>
-  </section>
-
-  <section id="cortes" class="catalogo fade-in">
-    <h3>Estilos de Corte</h3>
-    <div class="slider-wrapper">
-      <button class="slider-btn prev">&#10094;</button>
-      <div class="cortes-slider">
-        <div class="corte-item"><img src="./assets/corte1.jpg" alt="Degradê Moderno"><p>Degradê Moderno</p><span>R$25</span></div>
-        <div class="corte-item"><img src="./assets/corte2.jpg" alt="Corte Social"><p>Corte Social</p><span>R$25</span></div>
-        <div class="corte-item"><img src="./assets/corte3.jpg" alt="Corte Infantil"><p>Corte Infantil</p><span>R$20</span></div>
-        <div class="corte-item"><img src="./assets/corte4.jpg" alt="Barba + Corte"><p>Barba + Corte</p><span>R$50</span></div>
+    <section class="catalogo fade-in" id="cortes">
+      <h3>Estilos de Corte</h3>
+      <div class="slider-wrapper">
+        <div class="cortes-slider">
+          <div class="corte-item"><img src="./assets/corte1.jpg" alt="Degradê Moderno">
+            <p>Degradê Moderno<span> R$25 </span></p>
+          </div>
+          <div class="corte-item"><img src="./assets/corte2.jpg" alt="Corte Social">
+            <p>Corte Social<span> R$25 </span></p>
+          </div>
+          <div class="corte-item"><img src="./assets/corte3.jpg" alt="Corte Infantil">
+            <p>Corte Infantil<span> R$20 </span></p>
+          </div>
+          <div class="corte-item"><img src="./assets/corte4.jpg" alt="Barba + Corte">
+            <p>Barba + Corte<span> R$50 </span></p>
+          </div>
+        </div>
       </div>
-      <button class="slider-btn next">&#10095;</button>
-    </div>
-  </section>
+    </section>
 
-  <section id="sobre" class="sobre fade-in">
-    <h3>Sobre a JL SKULL BARBER</h3>
-    <div class="sobre-conteudo">
-      <img src="./assets/lucas.jpg" alt="Lucas Marco Rodrigues">
-      <div>
-        <p>Fundada por <strong>Lucas Marco Rodrigues</strong>, a JL Skull Barber nasceu da paixão por cortes de cabelo com estilo e classe. Um ambiente pensado para quem valoriza atendimento personalizado e visual impecável.</p>
-        <ul class="destaques">
-          <li>Bebida gratuita</li>
-          <li>Ambiente climatizado</li>
-          <li>Wi-Fi liberado</li>
-          <li>Atendimento com hora marcada</li>
-        </ul>
+    <section class="sobre fade-in" id="sobre">
+      <div class="sobre-container">
+        <img src="./assets/lucas.jpg" alt="Lucas Marco Rodrigues">
+        <div class="sobre-conteudo">
+          <h3>Sobre a JL SKULL BARBER</h3>
+          <p>Fundada por <strong>Lucas Marco Rodrigues</strong>, a JL Skull Barber nasceu da paixão por cortes de cabelo
+            com estilo e classe. Um ambiente pensado para quem valoriza atendimento personalizado e visual impecável.
+          </p>
+          <ul class="destaques">
+            <li>Bebida gratuita</li>
+            <li>Ambiente climatizado</li>
+            <li>Wi-Fi liberado</li>
+            <li>Atendimento com hora marcada</li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="depoimentos fade-in">
-    <h3>O que dizem nossos clientes</h3>
-    <div class="depoimentos-grid">
-      <div class="depoimento"><p>"Melhor barbearia da cidade, corte impecável!"</p><strong>João Pedro</strong><div class="stars">★★★★★</div></div>
-      <div class="depoimento"><p>"Ambiente top e atendimento de primeira!"</p><strong>Felipe Ramos</strong><div class="stars">★★★★★</div></div>
-    </div>
-  </section>
-
-  <footer id="contato">
-    <div class="footer-content">
-      <p>Entre em contato:</p>
-      <div class="contato-icons">
-        <a href="https://www.instagram.com/jl_skull_barber" target="_blank"><img src="./assets/instagram-icon.png" alt="Instagram" /></a>
-        <a href="https://wa.me/+5595984058157" target="_blank"><img src="./assets/whatsapp-icon.png" alt="WhatsApp" /></a>
-        <a href="tel:+5595984058157"><img src="./assets/phone-icon.png" alt="Telefone" /></a>
+    <section class="avaliacoes-verticais fade-in" id="opinioes">
+      <h3>Mais opiniões</h3>
+      <div id="avaliacoes-container"></div>
+      <div class="paginacao">
+        <button id="prev-page">Anterior</button>
+        <span id="pagina-atual">1</span>
+        <button id="next-page">Próxima</button>
       </div>
-      <p>Endereço:</p>
-      <p>Av. Getúlio Vargas, nº 7548, Calunga, Boa Vista - RR, 6930347</p>
-      <p>Horário de funcionamento:</p>
-      <p>08:00H às 20:00H, Segunda-feira à Sábado</p>
-      <p><a href="https://www.google.com/maps?q=Av.+Getúlio+Vargas,+7548,+Calunga,+Boa+Vista,+Roraima" target="_blank" style="color: #d4af37;">Ver localização no Google Maps</a></p>
-      <iframe src="https://www.google.com/maps?q=Av.+Get%C3%BAlio+Vargas,+7548,+Calunga,+Boa+Vista,+Roraima&output=embed" width="40%" height="400" style="border:0; margin-top: 20px;" allowfullscreen="" loading="lazy"></iframe>
-      <p>© 2025 JL Skull Barber. Todos os direitos reservados.</p>
-    </div>
-  </footer>
+    </section>
 
+
+    <footer id="contato">
+      <div class="footer-content">
+        <p>Entre em contato:</p>
+        <div class="contato-icons">
+          <a href="https://www.instagram.com/jl_skull_barber" target="_blank"><img src="./assets/instagram-icon.png"
+              alt="Instagram" /></a>
+          <a href="https://wa.me/+5595984058157" target="_blank"><img src="./assets/whatsapp-icon.webp"
+              alt="WhatsApp" /></a>
+          <a href="tel:+5595984058157"><img src="./assets/phone-icon.png" alt="Telefone" /></a>
+        </div>
+        <p>Endereço:</p>
+        <p>Av. Getúlio Vargas, nº 7548, Calunga, Boa Vista - RR, 6930347</p>
+        <p>Horário de funcionamento:</p>
+        <p>08:00H às 20:00H, Segunda-feira à Sábado</p>
+        <p><a href="https://www.google.com/maps?q=Av.+Get%C3%BAlio+Vargas,+7548,+Calunga,+Boa+Vista,+Roraima"
+            target="_blank" style="color: #d4af37;">Ver localização no Google Maps</a></p>
+        <iframe
+          src="https://www.google.com/maps?q=Av.+Get%C3%BAlio+Vargas,+7548,+Calunga,+Boa+Vista,+Roraima&output=embed"
+          width="100%" height="300" style="border:0; margin-top: 20px;" allowfullscreen="" loading="lazy"></iframe>
+        <p>© 2025 JL Skull Barber. Todos os direitos reservados.</p>
+      </div>
+    </footer>
+  </main>
+  <a href="https://wa.me/+5595984058157" class="whatsapp-btn" target="_blank">
+    <img src="./assets/whatsapp-icon.webp" alt="Agende aqui" />
+  </a>
   <script src="./script.js"></script>
 </body>
+
 </html>
