--- a/index.html
+++ b/index.html
@@ -25,28 +25,26 @@
       </ul>
     </nav>
   </header>
-  <main>
 
+  <main>
     <section id="home" class="hero fade-in">
       <div class="hero-content"></div>
     </section>
 
     <section class="catalogo fade-in" id="cortes">
       <h3>Estilos de Corte</h3>
-      <div class="slider-wrapper">
-        <div class="cortes-slider">
-          <div class="corte-item"><img src="./assets/corte1.jpg" alt="Degradê Moderno">
-            <p>Degradê Moderno<span> R$25 </span></p>
-          </div>
-          <div class="corte-item"><img src="./assets/corte2.jpg" alt="Corte Social">
-            <p>Corte Social<span> R$25 </span></p>
-          </div>
-          <div class="corte-item"><img src="./assets/corte3.jpg" alt="Corte Infantil">
-            <p>Corte Infantil<span> R$20 </span></p>
-          </div>
-          <div class="corte-item"><img src="./assets/corte4.jpg" alt="Barba + Corte">
-            <p>Barba + Corte<span> R$50 </span></p>
-          </div>
+      <div class="cortes-slider">
+        <div class="corte-item"><img src="./assets/corte1.jpg" alt="Degradê Moderno">
+          <p>Degradê Moderno <span>R$25</span></p>
+        </div>
+        <div class="corte-item"><img src="./assets/corte2.jpg" alt="Corte Social">
+          <p>Corte Social <span>R$25</span></p>
+        </div>
+        <div class="corte-item"><img src="./assets/corte3.jpg" alt="Corte Infantil">
+          <p>Corte Infantil <span>R$20</span></p>
+        </div>
+        <div class="corte-item"><img src="./assets/corte4.jpg" alt="Barba + Corte">
+          <p>Barba + Corte <span>R$50</span></p>
         </div>
       </div>
       <button class="btn-agendar">Agendar Horário</button>
@@ -58,8 +56,7 @@
         <div class="sobre-conteudo">
           <h3>Sobre a JL SKULL BARBER</h3>
           <p>Fundada por <strong>Lucas Marco Rodrigues</strong>, a JL Skull Barber nasceu da paixão por cortes de cabelo
-            com estilo e classe. Um ambiente pensado para quem valoriza atendimento personalizado e visual impecável.
-          </p>
+            com estilo e classe.</p>
           <ul class="destaques">
             <li>Bebida gratuita</li>
             <li>Ambiente climatizado</li>
@@ -80,7 +77,6 @@
       </div>
     </section>
 
-
     <footer id="contato">
       <div class="footer-content">
         <p>Entre em contato:</p>
@@ -91,29 +87,60 @@
               alt="WhatsApp" /></a>
           <a href="tel:+5595984058157"><img src="./assets/phone-icon.png" alt="Telefone" /></a>
         </div>
-        <p>Endereço:</p>
-        <p>Av. Getúlio Vargas, nº 7548, Calunga, Boa Vista - RR, 6930347</p>
-        <p>Horário de funcionamento:</p>
-        <p>08:00H às 20:00H, Segunda-feira à Sábado</p>
-        <p><a href="https://www.google.com/maps?q=Av.+Get%C3%BAlio+Vargas,+7548,+Calunga,+Boa+Vista,+Roraima"
-            target="_blank" style="color: #d4af37;">Ver localização no Google Maps</a></p>
+        <p>Endereço: Av. Getúlio Vargas, nº 7548, Calunga, Boa Vista - RR</p>
+        <p>Horário: 08h–20h (Seg–Sáb)</p>
+        <p><a href="https://maps.google.com?q=Av.+Get%C3%BAlio+Vargas,+7548" target="_blank" style="color:#d4af37;">Ver
+            no Google Maps</a></p>
         <iframe
           src="https://www.google.com/maps?q=Av.+Get%C3%BAlio+Vargas,+7548,+Calunga,+Boa+Vista,+Roraima&output=embed"
-          width="100%" height="300" style="border:0; margin-top: 20px;" allowfullscreen="" loading="lazy"></iframe>
+          width="100%" height="300" style="border:0; margin-top:1rem;" allowfullscreen="" loading="lazy"></iframe>
         <p>© 2025 JL Skull Barber. Todos os direitos reservados.</p>
       </div>
     </footer>
   </main>
-  <a href="https://wa.me/+5595984058157" class="whatsapp-btn" target="_blank">
-    <img src="./assets/whatsapp-icon.webp" alt="Agende aqui" />
-  </a>
+
+  <a href="https://wa.me/+5595984058157" class="whatsapp-btn" target="_blank"><img src="./assets/whatsapp-icon.webp"
+      alt="Agende aqui" /></a>
+
+  <!-- Modal Wizard -->
   <div class="modal-overlay hidden" id="modal-overlay"></div>
   <div class="modal hidden" id="modal">
     <button class="modal-close" id="modal-close">&times;</button>
-    <h3>Selecione uma data</h3>
-    <div id="calendar"></div>
-    <div id="horarios-disponiveis"></div>
+
+    <!-- Passo 1: Calendário -->
+    <div class="booking-step active" data-step="1">
+      <h4>1. Selecione a data</h4>
+      <div id="calendar"></div>
+      <div class="wizard-nav">
+        <button class="wizard-next" data-to="2">›</button>
+      </div>
+    </div>
+
+    <!-- Passo 2: Horários -->
+    <div class="booking-step" data-step="2">
+      <h4>2. Selecione o horário</h4>
+      <ul id="horarios-disponiveis"></ul>
+      <div class="wizard-nav">
+        <button class="wizard-prev" data-to="1">‹</button>
+        <button class="wizard-next" data-to="3">›</button>
+      </div>
+    </div>
+
+    <!-- Passo 3: Formulário -->
+    <div class="booking-step" data-step="3">
+      <h4>3. Confirme seus dados</h4>
+      <div id="booking-form">
+        <input type="text" id="inputNome" placeholder="Seu nome" />
+        <input type="tel" id="inputTelefone" placeholder="Seu telefone" />
+        <button id="btnConfirmar">Confirmar Agendamento</button>
+        <p id="mensagemResultado"></p>
+      </div>
+      <div class="wizard-nav">
+        <button class="wizard-prev" data-to="2">‹</button>
+      </div>
+    </div>
   </div>
+
   <script type="module" src="./script.js"></script>
 </body>
 
